--- a/index.html
+++ b/index.html
@@ -2,34 +2,47 @@
 <html>
   <head>
     <title>Тynuщво Goblina</title>
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/index.html.css">
     <script>
       alert("Если вы не достигли 18-летия или являетесь (являлись) гражданином недружественной к Российской Федерации страны и (или) являетесь иностранным агентом и (или) лицом (физическим или юридическим) выполняющим функции иностранного агента и (или) получаете (получали) финансирование из-за рубежа (исключением является премия нобелевского комитета в области точных наук) и (или) хоть раз засовывали язык и (или) другие конечности в розетку (в том числе обесточенную) администрация сайта требует, чтобы вы немедленно покинули его (ИР \"Тупищво гоблина\").")
     </script>
   </head>
   <body>
-    <header>
-      <h1 id="logo">Интернёт ресурс "тупищво гоблина"</h1>
-      <small id="deviz">Флексим since 1900</small>
-      <hr>
-    </header>
-
-    <iframe src="https://calendar.google.com/calendar/embed?src=9m9oifh7emm7hl8mlfq5luo4vs%40group.calendar.google.com&ctz=Europe%2FMoscow" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-
-    <footer id="footer">
-      <hr>
-      (c) Интернёт ресурс <a href="https://t.me/+D4wRqGVsTKszZjIy">"тупищво гоблина"</a> <br>
-      Чтобы полуичть доступ к ИР "тупищво гоблина" необходимо подать заявку на получения доступа перейдя по ссылке выше и оплатить доступ следуя инструкциям по <a href="https://www.donationalerts.com/r/ischvo">ссылке</a> <br><br>
-      
-      Жалобы и рац. предложения принимаются по адресу: 430005, Республика Мордовия, г. Саранск, ул. Московская, д. 38, к. 109.<br>
-      Получатель: Учащийся 7Б класса, Иннокентий Вилкович Сталин<br><br>
-
-      Деятельность Meta Platforms Inc. (Facebook и Instagram) запрещена в Российской Федерации.<br><br>
-      <img src="img/stopcovid.jpg" alt="Отсановите пендосскую заразу Covid-19 --- Сделайте прививку, пожалуйста!"> 
-      <img src="img/Z.jpg" alt="#Своих не бросаем Поможем жителям Донбаса!">
-      <img src="img/grib.jpg" alt="Пролетарии всех стран соединяйтесь">
-      <br>
-      <small>Если вы не достигли 18-летия или являетесь (являлись) гражданином недружественной к Российской Федерации страны и (или) являетесь иностранным агентом и (или) лицом (физическим или юридическим) выполняющим функции иностранного агента и (или) получаете (получали) финансирование из-за рубежа (исключением является премия нобелевского комитета в области точных наук) и (или) хоть раз засовывали язык и (или) другие конечности в розетку (в том числе обесточенную) администрация сайта требует, чтобы вы немедленно покинули его (ИР "Тупищво гоблина").</small>
-    </footer>
+    <table width="100%" cellspacing="0" cellpadding="0" border="0">
+    <tbody>
+      <tr> <td>
+        <ul class="tablist" style="">
+          <li id="logo" class="headitem">
+            <a href="./" podskazka="На главную!">тупищво</a>
+          </li>
+          <li class="headitem">
+            <a href="./projects/" podskazka="Проекты ИР">Проекты</a>
+          </li>
+          <li class="headitem">
+            <a href="./lenin/" podskazka="Олимпиада им. Ленина">Олимпиада</a>
+          </li>
+          <li class="headitem">
+            <a href="./donate/" podskazka="Безвозмездная и не только помощь проекту рублём и копейкой">Помочь проекту</a>
+          </li>
+          <li class="headitem">
+            <a href="/" podskazka="На главную!">О нас</a>
+          </li>
+        </ul>
+      </td> </tr>
+      <tr> <td  colspan="3" style="height: 3px; background-color: #f00;" align="center"></td> </tr>
+      <tr> <td>
+        
+        <iframe src="https://calendar.google.com/calendar/embed?src=9m9oifh7emm7hl8mlfq5luo4vs%40group.calendar.google.com&amp;ctz=Europe%2FMoscow" style="border: 0" scrolling="no" width="800" height="600" frameborder="0"></iframe>
+      </td> </tr>
+      <tr> <td  colspan="3" style="height: 3px; background-color: #f00;" align="center"></td> </tr>
+      <tr> <td style="color:#fff">
+        <p>(c) Интернёт ресурс «тупищво гоблина им. 80-лет Октября»</p>
+        <p>Деятельность Meta Platforms Inc. (Facebook и Instagram) запрещена в Российской Федерации.</p>
+        <p>Жалобы и рац. предложения принимаются по адресу: 430005, Республика Мордовия, г. Саранск, ул. Московская, д. 38, к. 109. Получатель: Учащийся 7Б класса, Иннокентий Вилкович Сталин</p>
+        <p style="font-size: 5px;">Если вы не достигли 18-летия или являетесь (являлись) гражданином недружественной к Российской Федерации страны и (или) являетесь иностранным агентом и (или) лицом (физическим или юридическим) выполняющим функции иностранного агента и (или) получаете (получали) финансирование из-за рубежа (исключением является премия нобелевского комитета в области точных наук) и (или) хоть раз засовывали язык и (или) другие конечности в розетку (в том числе обесточенную) администрация сайта требует, чтобы вы немедленно покинули его (ИР "тупищво гоблина").</p>
+      </td> </tr>
+    </tbody>
+    </table>
   </body>
 </html>
