--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <tr> <td>
         <ul class="tablist" style="">
           <li id="logo" class="headitem">
-            <a href="./" podskazka="На главную!">тупищво</a>
+            <a href="/" podskazka="На главную!">тупищво</a>
           </li>
           <li class="headitem">
-            <a href="./projects/" podskazka="Проекты ИР">Проекты</a>
+            <a href="/projects/" podskazka="Проекты ИР">Проекты</a>
           </li>
           <li class="headitem">
-            <a href="./lenin/" podskazka="Олимпиада им. Ленина">Олимпиада</a>
+            <a href="/lenin/" podskazka="Олимпиада им. Ленина">Олимпиада</a>
           </li>
           <li class="headitem">
-            <a href="./donate/" podskazka="Безвозмездная и не только помощь проекту рублём и копейкой">Помочь проекту</a>
+            <a href="https://www.donationalerts.com/r/ischvo" podskazka="Безвозмездная и не только помощь проекту рублём и копейкой">Помочь проекту</a>
           </li>
           <li class="headitem">
             <a href="/" podskazka="На главную!">О нас</a>
