--- a/lenin/index.html
+++ b/lenin/index.html
@@ -14,16 +14,16 @@
       <tr> <td>
         <ul class="tablist" style="">
           <li id="logo" class="headitem">
-            <a href="./" podskazka="На главную!">тупищво</a>
+            <a href="/" podskazka="На главную!">тупищво</a>
           </li>
           <li class="headitem">
-            <a href="./projects/" podskazka="Проекты ИР">Проекты</a>
+            <a href="/projects/" podskazka="Проекты ИР">Проекты</a>
           </li>
           <li class="headitem">
-            <a href="./lenin/" podskazka="Олимпиада им. Ленина">Олимпиада</a>
+            <a href="/lenin/" podskazka="Олимпиада им. Ленина">Олимпиада</a>
           </li>
           <li class="headitem">
-            <a href="./donate/" podskazka="Безвозмездная и не только помощь проекту рублём и копейкой">Помочь проекту</a>
+            <a href="https://www.donationalerts.com/r/ischvo" podskazka="Безвозмездная и не только помощь проекту рублём и копейкой">Помочь проекту</a>
           </li>
           <li class="headitem">
             <a href="/" podskazka="На главную!">О нас</a>
@@ -31,7 +31,7 @@
         </ul>
       </td> </tr>
       <tr> <td  colspan="3" style="height: 3px; background-color: #f00;" align="center"></td> </tr>
-      <tr> <td>
+      <tr> <td style="color:#fff">
         <h1>Официальная страница Олимпиады им. Ленина</h1>
         <img src="../img/1.gif">
         <p>Целью Олимпиады им. Ленина является популяризация образа Владимира Ильича Ленина в массах, т.к. по опыту молодое поколение не знает о нём ничего ил практически ничего. Олимпиада им. Ленина пройдёт в заочном формате длительностью в 5 - 7 часов без прокторинга. Перед основным туром будет возможность всё протестировать на пробном туре. О датах и времени начала олимпиады будет объявлено позже. Предположительно олимпиада пройдёт в декабре - апреле 2022-23 года</p>
