--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <tr> <td>
         
         <iframe src="https://calendar.google.com/calendar/embed?src=9m9oifh7emm7hl8mlfq5luo4vs%40group.calendar.google.com&amp;ctz=Europe%2FMoscow" style="border: 0" scrolling="no" width="800" height="600" frameborder="0"></iframe>
+
+        https://stalker-world.ru/igry/stalker_ten_chernobylja_skachat_torrent/7-1-0-44 --- Спасибо камраду Антону --- 25.08
       </td> </tr>
       <tr> <td  colspan="3" style="height: 3px; background-color: #f00;" align="center"></td> </tr>
       <tr> <td style="color:#fff">
