--- a/monocoin/index.html
+++ b/monocoin/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Тynuщво Goblina</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/index.html.css">
+    <title>MonoCoin | Тynuщво Goblina</title>
+    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.html.css">
     <script>
       alert("Если вы не достигли 18-летия или являетесь (являлись) гражданином недружественной к Российской Федерации страны и (или) являетесь иностранным агентом и (или) лицом (физическим или юридическим) выполняющим функции иностранного агента и (или) получаете (получали) финансирование из-за рубежа (исключением является премия нобелевского комитета в области точных наук) и (или) хоть раз засовывали язык и (или) другие конечности в розетку (в том числе обесточенную) администрация сайта требует, чтобы вы немедленно покинули его (ИР \"Тупищво гоблина\").")
     </script>
@@ -23,9 +23,6 @@
             <a href="/lenin/" podskazka="Олимпиада им. Ленина">Олимпиада</a>
           </li>
           <li class="headitem">
-            <a href="/monocoin/" podskazka="Каминг сун...">Monocoin</a>
-          </li>
-          <li class="headitem">
             <a href="https://www.donationalerts.com/r/ischvo" podskazka="Безвозмездная и не только помощь проекту рублём и копейкой">Помочь проекту</a>
           </li>
           <li class="headitem">
@@ -34,15 +31,11 @@
         </ul>
       </td> </tr>
       <tr> <td  colspan="3" style="height: 3px; background-color: #f00;" align="center"></td> </tr>
-      <tr> <td>
+      <tr> <td style="color:#fff">
+        <h1>Официальная страница MonoCoin</h1>
+        Каминг сун
+  
         
-        <iframe src="https://calendar.google.com/calendar/embed?src=9m9oifh7emm7hl8mlfq5luo4vs%40group.calendar.google.com&amp;ctz=Europe%2FMoscow" style="border: 0" scrolling="no" width="800" height="600" frameborder="0"></iframe>
-
-        <br>
-        https://stalker-world.ru/igry/stalker_ten_chernobylja_skachat_torrent/7-1-0-44 --- Спасибо камраду Антону --- 25.08
-
-        <br>
-        Сайт полностью перешел на новый движок --- 25.08 16:03 Саранск, Кремль
       </td> </tr>
       <tr> <td  colspan="3" style="height: 3px; background-color: #f00;" align="center"></td> </tr>
       <tr> <td style="color:#fff">
