--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </div>
       
       <script src="js/gen.js"></script>
-      <!-- <script src="js/genblog.js"></script> -->
+      <script src="js/genblog.js"></script>
       
     </div>
   </body>
