--- a/lenin/index.html
+++ b/lenin/index.html
@@ -2,20 +2,17 @@
 <html>
   <head>
     <title>Олимпиада им. Ленина | Tynuщвo Goblina</title>
-    <link rel="stylesheet" type="text/css" href="css/headPanel.css">
-    <link rel="stylesheet" type="text/css" href="css/site.css">
-    <link rel="stylesheet" type="text/css" href="css/blogPost.css">
+    <link rel="stylesheet" type="text/css" href="/css/headPanel.css">
+    <link rel="stylesheet" type="text/css" href="/css/site.css">
   </head>
   <body>
     <div id="root">
-      <div id="content">
-        <iframe src="https://calendar.google.com/calendar/embed?src=9m9oifh7emm7hl8mlfq5luo4vs%40group.calendar.google.com&ctz=Europe%2FMoscow" style="border: 0" scrolling="no" width="800" height="600" frameborder="0"></iframe>
-      </div>
       
-      <script src="js/gen.js"></script>
       <h1>Официальная страница Олимпиады им. Ленина</h1>
       <img src="/img/1.gif">
       <p>Целью Олимпиады им. Ленина является популяризация образа Владимира Ильича Ленина в массах, т.к. по опыту молодое поколение не знает о нём ничего ил практически ничего. Олимпиада им. Ленина пройдёт в заочном формате длительностью в 5 - 7 часов без прокторинга. Перед основным туром будет возможность всё протестировать на пробном туре. О датах и времени начала олимпиады будет объявлено позже. Предположительно олимпиада пройдёт в декабре - апреле 2022-23 года</p>
+
+      <script src="/js/gen.js"></script>
       
     </div>
   </body>
