--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Tynuщвo Goblina</title>
-    <link rel="stylesheet" type="text/css" href="css/headPanel.css">
-    <link rel="stylesheet" type="text/css" href="css/site.css">
-    <link rel="stylesheet" type="text/css" href="css/blogPost.css">
+    <link rel="stylesheet" type="text/css" href="/css/headPanel.css">
+    <link rel="stylesheet" type="text/css" href="/css/site.css">
+    <link rel="stylesheet" type="text/css" href="/css/blogPost.css">
   </head>
   <body>
     <div id="root">
@@ -12,8 +12,8 @@
         <iframe src="https://calendar.google.com/calendar/embed?src=9m9oifh7emm7hl8mlfq5luo4vs%40group.calendar.google.com&ctz=Europe%2FMoscow" style="border: 0" scrolling="no" width="800" height="600" frameborder="0"></iframe>
       </div>
       
-      <script src="js/gen.js"></script>
-      <script src="js/genblog.js"></script>
+      <script src="/js/gen.js"></script>
+      <script src="/js/genblog.js"></script>
       
     </div>
   </body>
