--- a/monocoin/index.html
+++ b/monocoin/index.html
@@ -2,17 +2,13 @@
 <html>
   <head>
     <title>Монокоин |Tynuщвo Goblina</title>
-    <link rel="stylesheet" type="text/css" href="css/headPanel.css">
-    <link rel="stylesheet" type="text/css" href="css/site.css">
-    <link rel="stylesheet" type="text/css" href="css/blogPost.css">
+    <link rel="stylesheet" type="text/css" href="/css/headPanel.css">
+    <link rel="stylesheet" type="text/css" href="/css/site.css">
   </head>
   <body>
     <div id="root">
-      <div id="content">
-        <iframe src="https://calendar.google.com/calendar/embed?src=9m9oifh7emm7hl8mlfq5luo4vs%40group.calendar.google.com&ctz=Europe%2FMoscow" style="border: 0" scrolling="no" width="800" height="600" frameborder="0"></iframe>
-      </div>
       
-      <script src="js/gen.js"></script>
+      <script src="/js/gen.js"></script>
       Каминг сун
       
     </div>
