--- a/monocoin/index.html
+++ b/monocoin/index.html
@@ -7,10 +7,8 @@
   </head>
   <body>
     <div id="root">
-      
+      <h1>Каминг сун</h1>
       <script src="/js/gen.js"></script>
-      Каминг сун
-      
     </div>
   </body>
 </html>
