--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/headPanel.css">
     <link rel="stylesheet" type="text/css" href="/css/site.css">
     <link rel="stylesheet" type="text/css" href="/css/blogPost.css">
+    <script>alert("Если вы не достигли 18-летия или являетесь (являлись) гражданином недружественной к Российской Федерации страны и (или) являетесь иностранным агентом и (или) лицом (физическим или юридическим) выполняющим функции иностранного агента и (или) получаете (получали) финансирование из-за рубежа (исключением является премия нобелевского комитета в области точных наук) и (или) хоть раз засовывали язык и (или) другие конечности в розетку (в том числе обесточенную) администрация сайта требует, чтобы вы немедленно покинули его (ИР \"тупищво гоблина\").")</script>
   </head>
   <body>
     <div id="root">
