--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Tynuщвo Goblina</title>
-    <link rel="stylesheet" type="text/css" href="/css/headPanel.css">
-    <link rel="stylesheet" type="text/css" href="/css/site.css">
-    <link rel="stylesheet" type="text/css" href="/css/blogPost.css">
-    <script>alert("Если вы не достигли 18-летия или являетесь (являлись) гражданином недружественной к Российской Федерации страны и (или) являетесь иностранным агентом и (или) лицом (физическим или юридическим) выполняющим функции иностранного агента и (или) получаете (получали) финансирование из-за рубежа (исключением является премия нобелевского комитета в области точных наук) и (или) хоть раз засовывали язык и (или) другие конечности в розетку (в том числе обесточенную) администрация сайта требует, чтобы вы немедленно покинули его (ИР \"тупищво гоблина\").")</script>
-  </head>
-  <body>
-    <div id="root">
-      <div id="content">
-        <iframe src="https://calendar.google.com/calendar/embed?src=9m9oifh7emm7hl8mlfq5luo4vs%40group.calendar.google.com&ctz=Europe%2FMoscow" style="border: 0" scrolling="no" width="800" height="600" frameborder="0"></iframe>
-      </div>
-      
-      <script src="/js/gen.js"></script>
-      <script src="/js/genblog.js"></script>
-      
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Официальный сайт Typuщвo Goblina</title>
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+</head>
+<body id="root">
+  <script src="js/genHeader.js"></script>
+  <div id="content" style="margin-top: 97px; background-color: white; height: 5000px;">
+
+  </div>
+  <div id="footer">
+    <div id="footerTitle">(c) Интернёт ресурс «тупищво гоблина»</div>
+    <div style="font-size: 14px; color:#6a6e72;">
+    430005 г. Саранск, ул. Московская, д. 38, к. 109 <br>
+    Учащийся 7Б класса, Иннокентий Вилкович Сталин
     </div>
-  </body>
+    <p>Деятельность Meta Platforms Inc. (Facebook и Instagram) запрещена в Российской Федерации</p>
+    <p>MonoCoin не является платёжным средством</p>
+    <p>Если вы не достигли 18-летия или являетесь (являлись) гражданином недружественной к Российской Федерации страны и (или) являетесь иностранным агентом и (или) лицом (физическим или юридическим) выполняющим функции иностранного агента и (или) получаете (получали) финансирование из-за рубежа (исключением является премия нобелевского комитета в области точных наук) и (или) хоть раз засовывали язык и (или) другие конечности в розетку (в том числе обесточенную) администрация сайта требует, чтобы вы немедленно покинули его (ИР "тупищво гоблина")</p>
+  </div>
+  <div id="agreement">
+    <a href="/">Политика конфиденциальности</a>
+  </div>
+</body>
 </html>
