--- a/index.html
+++ b/index.html
@@ -4,24 +4,13 @@
   <meta charset="UTF-8">
   <title>Официальный сайт Typuщвo Goblina</title>
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body id="root">
   <script src="js/genHeader.js"></script>
-  <div id="content" style="margin-top: 97px; background-color: white; height: 5000px;">
-
+  <div id="content">
+    <script src="/js/genblog.js"></script>
   </div>
-  <div id="footer">
-    <div id="footerTitle">(c) Интернёт ресурс «тупищво гоблина»</div>
-    <div style="font-size: 14px; color:#6a6e72;">
-    430005 г. Саранск, ул. Московская, д. 38, к. 109 <br>
-    Учащийся 7Б класса, Иннокентий Вилкович Сталин
-    </div>
-    <p>Деятельность Meta Platforms Inc. (Facebook и Instagram) запрещена в Российской Федерации</p>
-    <p>MonoCoin не является платёжным средством</p>
-    <p>Если вы не достигли 18-летия или являетесь (являлись) гражданином недружественной к Российской Федерации страны и (или) являетесь иностранным агентом и (или) лицом (физическим или юридическим) выполняющим функции иностранного агента и (или) получаете (получали) финансирование из-за рубежа (исключением является премия нобелевского комитета в области точных наук) и (или) хоть раз засовывали язык и (или) другие конечности в розетку (в том числе обесточенную) администрация сайта требует, чтобы вы немедленно покинули его (ИР "тупищво гоблина")</p>
-  </div>
-  <div id="agreement">
-    <a href="/">Политика конфиденциальности</a>
-  </div>
+  <script src="js/genFooter.js"></script>
 </body>
 </html>
