--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body id="root">
   <script src="js/genHeader.js"></script>
   <div id="content">
-    <script src="/js/genblog.js"></script>
+    <div id="contentLeft">
+      <div id="banner120x500">
+        <script src="js/genAds.js"></script>
+      </div>
+    </div>
+    <div id="contentCenter">
+
+    </div>
+    <div id="contentRight">
+
+    </div>
   </div>
   <script src="js/genFooter.js"></script>
 </body>
