--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script src="js/genHeader.js"></script>
   <div id="content">
     <div id="contentLeft">
-      <div id="banner120x500">
-        <script src="js/genAds.js"></script>
+      <div id="mer120x500">
+        <script src="js/genMer.js"></script>
       </div>
     </div>
     <div id="contentCenter">
