--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
   <script src="js/genHeader.js"></script>
   <div id="content">
     <div id="contentLeft">
-      <a id="mer120x500_1" href="https://mos.ru/" class="mer120x500" style="padding-bottom:32px;">
-        <img id="mer120x500IMG_1" class="mer120x500IMG" src="img/mer120x500/1.png">
-      </a>
-      <a id="mer120x500_2" href="https://mos.ru/" class="mer120x500">
-        <img id="mer120x500IMG_2" class="mer120x500IMG" src="img/mer120x500/6.png">
-      </a>
+      <script src="js/genMer.js"></script>
     </div>
     <div id="contentCenter">
 
