--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
   <script src="js/genHeader.js"></script>
   <div id="content">
     <div id="contentLeft">
-      <script src="js/genMer.js"></script>
+      <!-- <a id="mer120x500_1" class="mer120x500" href ="/" style="margin-bottom:32px; background-image: url(img/mer120x500/1.png);"></a>
+      <a id="mer120x500_1" class="mer120x500" href ="/" style="background-image: url(img/mer120x500/3.png);"></a> -->
+      <script src="js/genMer120x500.js"></script>
     </div>
-    <div id="contentCenter">
-
-    </div>
-    <div id="contentRight">
-
-    </div>
+    <div id="contentCenter" style="width:800px;height:2000px;background-color:red;"></div>
+    <div id="contentRight"></div>
   </div>
   <script src="js/genFooter.js"></script>
 </body>
