--- a/index.html
+++ b/index.html
@@ -5,17 +5,29 @@
   <title>Официальный сайт Typuщвo Goblina</title>
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/mer.css">
+  <link rel="stylesheet" type="text/css" href="css/content.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 <body id="root">
   <script src="js/genHeader.js"></script>
+  
   <div id="content">
     <div id="contentLeft">
-      <!-- <a id="mer120x500_1" class="mer120x500" href ="/" style="margin-bottom:32px; background-image: url(img/mer120x500/1.png);"></a>
-      <a id="mer120x500_1" class="mer120x500" href ="/" style="background-image: url(img/mer120x500/3.png);"></a> -->
       <script src="js/genMer120x500.js"></script>
     </div>
-    <div id="contentCenter" style="width:800px;height:2000px;background-color:red;"></div>
+    <div id="contentCenter" style="width:800px;height:2000px; background-color: red;">
+      <a class="contentItem">
+        <div id="zz">pisya</div>
+      </a>
+      <!-- <a class="contentItem"></a>
+      <a class="contentItem"></a>
+      <a class="contentItem"></a>
+      <a class="contentItem"></a>
+      <a class="contentItem"></a>
+      <a class="contentItem"></a>
+      <a class="contentItem"></a>
+      <a class="contentItem"></a> -->
+    </div>
     <div id="contentRight"></div>
   </div>
   <script src="js/genFooter.js"></script>
