--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/mer.css">
   <link rel="stylesheet" type="text/css" href="css/content.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
+  <script src="js/moscow.js"></script>
 </head>
 <body id="root">
   <script src="js/genHeader.js"></script>
@@ -15,18 +16,9 @@
     <div id="contentLeft">
       <script src="js/genMer120x500.js"></script>
     </div>
-    <div id="contentCenter" style="width:800px;height:2000px; background-color: red;">
-      <a class="contentItem">
-        <div id="zz">pisya</div>
-      </a>
-      <!-- <a class="contentItem"></a>
-      <a class="contentItem"></a>
-      <a class="contentItem"></a>
-      <a class="contentItem"></a>
-      <a class="contentItem"></a>
-      <a class="contentItem"></a>
-      <a class="contentItem"></a>
-      <a class="contentItem"></a> -->
+    <div id="contentCenter" style="width:800px;height:2000px;">
+      <button id="itogovoe_sochineniye_2022_11klass" onclick="itogovoe_sochineniye_2022_11klass_alert()">
+        ЗАРЕГЕСТРИРОВАТЬСЯ НА ИТОГОВОЕ СОЧИНЕНИЕ</button>
     </div>
     <div id="contentRight"></div>
   </div>
