--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <script src="js/genMer120x500.js"></script>
     </div>
     <div id="contentCenter" style="width:800px;height:2000px;">
-      <button id="itogovoe_sochineniye_2022_11klass" onclick="itogovoe_sochineniye_2022_11klass_alert()">
+      <button style="color: white; font-size: 55px; font-weight: bold; text-shadow: 1px 1px 2px black, 0 0 1em red;"id="itogovoe_sochineniye_2022_11klass" onclick="itogovoe_sochineniye_2022_11klass_alert()">
         ЗАРЕГЕСТРИРОВАТЬСЯ НА ИТОГОВОЕ СОЧИНЕНИЕ</button>
     </div>
     <div id="contentRight"></div>
