--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <div id="contentLeft">
       <script src="js/genMer120x500.js"></script>
     </div>
-    <div id="contentCenter" style="width:800px;height:2000px;">
-      <button style="color: white; font-size: 55px; font-weight: bold; text-shadow: 1px 1px 2px black, 0 0 1em red;"id="itogovoe_sochineniye_2022_11klass" onclick="itogovoe_sochineniye_2022_11klass_alert()">
-        ЗАРЕГЕСТРИРОВАТЬСЯ НА ИТОГОВОЕ СОЧИНЕНИЕ</button>
+    <div id="contentCenter" style="height:2000px;">
+      
     </div>
-    <div id="contentRight"></div>
+    <div id="contentRight">
+      <button style="color: white; font-size: 16px; font-weight: bold; text-shadow: 1px 1px 2px black, 0 0 1em red;"id="itogovoe_sochineniye_2022_11klass" onclick="itogovoe_sochineniye_2022_11klass_alert()">
+        ЗАРЕГЕСТРИРОВАТЬСЯ НА ИТОГОВОЕ СОЧИНЕНИЕ
+      </button>
+      <hr>
+      <a id="mer240x400_1" class="mer240x400" href="https://rlc-rm.gosuslugi.ru" style="margin-bottom:32px; background-image: url(img/mer240x400/1.png);"></a>
+    </div>
   </div>
   <script src="js/genFooter.js"></script>
 </body>
