--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         ЗАРЕГЕСТРИРОВАТЬСЯ НА ИТОГОВОЕ СОЧИНЕНИЕ
       </button>
       <hr>
-      <a id="mer240x400_1" class="mer240x400" href="https://rlc-rm.gosuslugi.ru" style="margin-bottom:32px; background-image: url(img/mer240x400/1.png);"></a>
+      <!-- <a id="mer240x400_1" class="mer240x400" href="https://rlc-rm.gosuslugi.ru" style="margin-bottom:32px; background-image: url(img/mer240x400/1.png);"></a> -->
+      <script src="js/genMer240x400.js"></script>
     </div>
   </div>
   <script src="js/genFooter.js"></script>
