--- a/old/lenin/index.html
+++ b/old/lenin/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <title>Олимпиада им. Ленина | Tynuщвo Goblina</title>
-    <link rel="stylesheet" type="text/css" href="/css/headPanel.css">
-    <link rel="stylesheet" type="text/css" href="/css/site.css">
+    <link rel="stylesheet" type="text/css" href="/old/css/headPanel.css">
+    <link rel="stylesheet" type="text/css" href="/old/css/site.css">
   </head>
   <body>
     <div id="root">
       
       <h1>Официальная страница Олимпиады им. Ленина</h1>
-      <img src="/img/1.gif">
+      <img src="/old/img/1.gif">
       <p>Целью Олимпиады им. Ленина является популяризация образа Владимира Ильича Ленина в массах, т.к. по опыту молодое поколение не знает о нём ничего ил практически ничего. Олимпиада им. Ленина пройдёт в заочном формате длительностью в 5 - 7 часов без прокторинга. Перед основным туром будет возможность всё протестировать на пробном туре. О датах и времени начала олимпиады будет объявлено позже. Предположительно олимпиада пройдёт в декабре - апреле 2022-23 года</p>
 
-      <script src="/js/gen.js"></script>
+      <script src="/old/js/gen.js"></script>
       
     </div>
   </body>
