--- a/old/monocoin/index.html
+++ b/old/monocoin/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>Монокоин |Tynuщвo Goblina</title>
-    <link rel="stylesheet" type="text/css" href="/css/headPanel.css">
-    <link rel="stylesheet" type="text/css" href="/css/site.css">
+    <link rel="stylesheet" type="text/css" href="/old/css/headPanel.css">
+    <link rel="stylesheet" type="text/css" href="/old/css/site.css">
   </head>
   <body>
     <div id="root">
       <h1>Каминг сун</h1>
-      <script src="/js/gen.js"></script>
+      <script src="/old/js/gen.js"></script>
     </div>
   </body>
 </html>
