--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/mer.css">
   <link rel="stylesheet" type="text/css" href="css/content.css">
+  <link rel="stylesheet" type="text/css" href="css/blog.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <script src="js/moscow.js"></script>
 </head>
@@ -17,11 +18,38 @@
       <script src="js/genMer120x500.js"></script>
     </div>
     <div id="contentCenter" style="height:2000px;">
-      <div id="blogPost_1" class="blogPost">
+      <!-- <div id="blogPost_1" class="blogPost">
         <a href="/view?id=1" id="blogPostTitle_1" class="blogPostTitle">
           Самый свежий анекдот
         </a>
+        <div id="blogPostInfo_1" class="blogPostInfo">
+          <span class="blogPostInfoItem blogPostDate">09.10.2022</span>
+          <span class="blogPostInfoItem blogPostTime">15:28</span>
+          <span class="blogPostInfoItem blogPostAuthor">Goblin</span>
+        </div>
+        <div class="blogPostContent">
+          Что сделал Ельцин когда дошел до конца улицы? <br>
+          Правый поворот
+        </div>
       </div>
+      <div id="blogPost_1" class="blogPost">
+        <a href="/view?id=1" id="blogPostTitle_1" class="blogPostTitle">
+          Анекдот 14
+        </a>
+        <div id="blogPostInfo_1" class="blogPostInfo">
+          <span class="blogPostInfoItem blogPostDate">09.10.2022</span>
+          <span class="blogPostInfoItem blogPostTime">15:28</span>
+          <span class="blogPostInfoItem blogPostAuthor">Goblin</span>
+        </div>
+        <div class="blogPostContent">
+          - Таня, скажи Арбуз <br>
+          - Арбуз<br>
+          - Твой папа карапуз<br>
+          - Сергеев, месяц без секса<br>
+          - Ну Таааня<br>
+        </div>
+      </div> -->
+      <script src="js/genBlog.js"></script>
     </div>
     <div id="contentRight">
       <button style="color: white; font-size: 16px; font-weight: bold; text-shadow: 1px 1px 2px black, 0 0 1em red;"id="itogovoe_sochineniye_2022_11klass" onclick="itogovoe_sochineniye_2022_11klass_alert()">
