--- a/index.html
+++ b/index.html
@@ -17,38 +17,7 @@
     <div id="contentLeft">
       <script src="js/genMer120x500.js"></script>
     </div>
-    <div id="contentCenter" style="height:2000px;">
-      <!-- <div id="blogPost_1" class="blogPost">
-        <a href="/view?id=1" id="blogPostTitle_1" class="blogPostTitle">
-          Самый свежий анекдот
-        </a>
-        <div id="blogPostInfo_1" class="blogPostInfo">
-          <span class="blogPostInfoItem blogPostDate">09.10.2022</span>
-          <span class="blogPostInfoItem blogPostTime">15:28</span>
-          <span class="blogPostInfoItem blogPostAuthor">Goblin</span>
-        </div>
-        <div class="blogPostContent">
-          Что сделал Ельцин когда дошел до конца улицы? <br>
-          Правый поворот
-        </div>
-      </div>
-      <div id="blogPost_1" class="blogPost">
-        <a href="/view?id=1" id="blogPostTitle_1" class="blogPostTitle">
-          Анекдот 14
-        </a>
-        <div id="blogPostInfo_1" class="blogPostInfo">
-          <span class="blogPostInfoItem blogPostDate">09.10.2022</span>
-          <span class="blogPostInfoItem blogPostTime">15:28</span>
-          <span class="blogPostInfoItem blogPostAuthor">Goblin</span>
-        </div>
-        <div class="blogPostContent">
-          - Таня, скажи Арбуз <br>
-          - Арбуз<br>
-          - Твой папа карапуз<br>
-          - Сергеев, месяц без секса<br>
-          - Ну Таааня<br>
-        </div>
-      </div> -->
+    <div id="contentCenter" style="">
       <script src="js/genBlog.js"></script>
     </div>
     <div id="contentRight">
