--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
-<a href="https://mos.ru/">Сайт мёра Москвы</a>
-<center style="font-size: 40px; color: red;">
-  САЙТ ЗАКРЫТ
-</center>
-<center style="font-size: 15px; color: red;">
-  бля(
-</center>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Официальный сайт Typuщвo Goblina</title>
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/mer.css">
+  <link rel="stylesheet" type="text/css" href="css/content.css">
+  <link rel="stylesheet" type="text/css" href="css/blog.css">
+  <link rel="icon" type="image/png" href="img/favicon.png">
+  <script src="js/moscow.js"></script>
+</head>
+<body id="root">
+  <script src="js/genHeader.js"></script>
+  
+  <div id="content">
+    <div id="contentLeft">
+      <script src="js/genMer120x500.js"></script>
+    </div>
+    <div id="contentCenter" style="">
+      <script src="js/genBlog.js"></script>
+    </div>
+    <div id="contentRight">
+      <button style="color: white; font-size: 16px; font-weight: bold; text-shadow: 1px 1px 2px black, 0 0 1em red;"id="itogovoe_sochineniye_2022_11klass" onclick="itogovoe_sochineniye_2022_11klass_alert()">
+        ЗАРЕГЕСТРИРОВАТЬСЯ НА ИТОГОВОЕ СОЧИНЕНИЕ
+      </button>
+      <hr>
+      <script src="js/genMer240x400.js"></script>
+    </div>
+  </div>
+  <script src="js/genFooter.js"></script>
+</body>
+</html>
