--- a/казино/index.html
+++ b/казино/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Казино от Typuщвo Goblina</title>
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-  <link rel="stylesheet" type="text/css" href="css/mer.css">
-  <link rel="stylesheet" type="text/css" href="css/content.css">
-  <link rel="stylesheet" type="text/css" href="css/blog.css">
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="stylesheet" type="text/css" href="/css/index.css">
+  <link rel="stylesheet" type="text/css" href="/css/mer.css">
+  <link rel="stylesheet" type="text/css" href="/css/content.css">
+  <link rel="stylesheet" type="text/css" href="/css/blog.css">
+  <link rel="icon" type="image/png" href="/img/favicon.png">
   <script src="/js/moscow.js"></script>
 </head>
 <body id="root">
